Modularize the desktop app for Java 9 and add Gradle tasks to start it